--- a/.gitmodules
+++ b/.gitmodules
@@ -43,6 +43,6 @@
 [submodule "pack/plugins/start/bufexplorer"]
 	path = pack/plugins/start/bufexplorer
 	url = https://github.com/jlanzarotta/bufexplorer
-[submodule "pack/plugins/start/vim-settings"]
-	path = pack/plugins/start/vim-settings
-	url = https://github.com/sheco/vim-settings
+[submodule "pack/plugins/start/easymotion"]
+	path = pack/plugins/start/easymotion
+	url = https://github.com/easymotion/vim-easymotion
