--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "pack/plugins/start/ranger"]
 	path = pack/plugins/start/ranger
 	url = https://github.com/francoiscabrol/ranger.vim
+[submodule "pack/plugins/start/vim-obsession"]
+	path = pack/plugins/start/vim-obsession
+	url = https://github.com/tpope/vim-obsession
