--- a/.gitmodules
+++ b/.gitmodules
@@ -52,6 +52,7 @@
 	url = https://github.com/francoiscabrol/ranger.vim
 [submodule "pack/plugins/start/vim-obsession"]
 	path = pack/plugins/start/vim-obsession
-	url = https://github.com/tpope/vim-obsession
+	url = https://github.com/tpope/vim-obsession.git
+	branch = master
 [submodule "vim-sensible"]
 	branch = master
