--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 [submodule "pack/plugins/start/fzf"]
 	path = pack/plugins/start/fzf
 	url = https://github.com/junegunn/fzf.git
+[submodule "pack/plugins/start/vim-colors-solarized"]
+	path = pack/plugins/start/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized
