--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "pack/plugins/start/vim-colors-solarized"]
 	path = pack/plugins/start/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized
+[submodule "pack/plugins/start/coc"]
+	path = pack/plugins/start/coc
+	url = https://github.com/neoclide/coc.nvim
