--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "pack/plugins/start/coc"]
 	path = pack/plugins/start/coc
 	url = https://github.com/neoclide/coc.nvim
+[submodule "pack/plugins/start/vim-vinegar"]
+	path = pack/plugins/start/vim-vinegar
+	url = https://github.com/tpope/vim-vinegar.git
