--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,6 @@
 [submodule "pack/plugins/start/tig-explorer"]
 	path = pack/plugins/start/tig-explorer
 	url = https://github.com/iberianpig/tig-explorer.vim
+[submodule "pack/plugins/start/vim-svelte"]
+	path = pack/plugins/start/vim-svelte
+	url = https://github.com/evanleck/vim-svelte
